# gpu-fluid-simulation

./: Cargo.toml  compute.wgsl  debug.wgsl  fluid_shader.wgsl  funcs.wgsl  particle_shader.wgsl  sort.wgsl
shaders/: compute.wgsl  fluid_shader.wgsl  funcs.wgsl  image_shader.wgsl  jump_flood.wgsl
src/: buffer.rs  egui_tools.rs  main.rs  new_renderer.rs  renderer.rs  shader.rs  simulation.rs  uniform.rs
