[package]
name = "gpu-fluid-simulation"
version = "0.1.0"
edition = "2024"

[dependencies]
glam = { version = "*", features = ["bytemuck", "rand"] }

wgpu = "*"
winit = "*"
bytemuck = "*"
pollster = "*"

sti = { git = "https://github.com/leddoo/sti" }


tracing = "*"
tracing-subscriber = "*"

rand = "*"

egui = "*"
egui-wgpu = { version = "*", features = ["winit"] }
egui-winit = "*"
