[package]
name = "gpu-fluid-simulation"
version = "0.1.0"
edition = "2024"

[dependencies]
glam = { version = "0.30.5", features = ["bytemuck", "rand"] }

wgpu = "25.0.2"
winit = "0.30.12"
bytemuck = "1.23.1"
pollster = "0.4.0"

tracing = "0.1.41"
tracing-subscriber = "0.3.19"

rand = "0.9.2"

egui = "0.32.0"
egui-wgpu = { version = "0.32.0", features = ["winit"] }
egui-winit = "0.32.0"
